website/i18n/en/docusaurus-plugin-content-docs/version-3.0.0/download.md
---
title: "SDK Download"
sidebar_label: "SDK Download"
description: ""
sidebar_position: 2
---
This page shows you how to download/import the Hachi Unity Plugin.

:::tip

 - **Xcode 14.2 or later is required to access the HachiSDK.**       
 - **When updating version 3.0.0, it is best to remove the old SDK (except the configuration file)([【Delete all SDK-related files】](other.md)). And export new Xcode or Android Studio projects, be careful not to overwrite projects exported to older versions of the SDK.**   
 - ** [Hachi 3.0.0 Update Notes (Developer must see)](https://pic6ktmsyi.feishu.cn/wiki/DRnRwGtEmi2qX2ksZFhce7RGnQd) **
:::


:::danger

 - ** For details, see [【SDK Integration】](integration.md) and [【Build Android Platform】 ](sdk-projectsettings/sdk-projectsettings-android.md). **       

:::

## Download the latest Unity plugin<br/>
[HachiSDK_3.5.0_a1555c11.unitypackage](https://touka-artifacts.oss-cn-beijing.aliyuncs.com/TKG%20%E5%8F%91%E8%A1%8C%E6%8A%80%E6%9C%AF/Hachi%20SDK/Unity/3.5.0/HachiSDK_3.5.0_a1555c11.unitypackage)（[Historical version](/versions)）
<a id='click'>    </a>

Import the plugin into Unity<br/>
Perform the following steps to import the downloaded plug-in:<br/>
In Unity, select Assets > Import Package > Custom Package...<br/>
Select the Unity Plugin file you downloaded.<br/>
In the Import Unity Package dialog box, click Import.<br/>

