website/i18n/en/docusaurus-plugin-content-docs/version-4.0.0/download.md
---
title: "SDK Download"
sidebar_label: "SDK Download"
description: ""
sidebar_position: 2
---
This page shows you how to download/import the Hachi Unity Plugin.

:::tip

 - **Xcode 14.2 or later is required to access the HachiSDK.**       
 - **When updating version 3.0.0, it is best to remove the old SDK (except the configuration file)([【Delete all SDK-related files】](other.md)). And export new Xcode or Android Studio projects, be careful not to overwrite projects exported to older versions of the SDK.**   
 - ** Starting from October 3, 2025, all games developed using the Unity engine must be upgraded to Unity 2022.3.62f2 or higher when a package is released (all Unity versions released before October 3, 2025, have high-risk vulnerabilities, and Google requires mandatory updates. This is a mandatory upgrade for security and stability). After the upgrade, please conduct a comprehensive test of the game to ensure that its functions, performance, monetization, etc. are all normal. For detailed information, please refer to [Upgrade Instructions](https://pic6ktmsyi.feishu.cn/wiki/EBSkwFOQ1iY51SkflCicvUTun6I) **
:::


:::danger

 - ** For details, see [【SDK Integration】](integration.md) and [【Build Android Platform】 ](sdk-projectsettings/sdk-projectsettings-android.md). **       

:::

## Download the latest Unity plugin<br/>
Overseas：[HachiSdk_4.0.3_1a668f6a.unitypackage](https://touka-artifacts.oss-cn-beijing.aliyuncs.com/TKG%20%E5%8F%91%E8%A1%8C%E6%8A%80%E6%9C%AF/Hachi%20SDK/Unity/4.0.3/HachiSdk_4.0.3_1a668f6a.unitypackage)（[Historical version](/versions)）
<a id='click'>    </a>

ChinaMainland：[HachiSdk_4.0.4_4d05cf86.unitypackage](https://touka-artifacts.oss-cn-beijing.aliyuncs.com/TKG%20%E5%8F%91%E8%A1%8C%E6%8A%80%E6%9C%AF/Hachi%20SDK/Unity/4.0.4/HachiSdk_4.0.4_4d05cf86.unitypackage)

Import the plugin into Unity<br/>
Perform the following steps to import the downloaded plug-in:<br/>
In Unity, select Assets > Import Package > Custom Package...<br/>
Select the Unity Plugin file you downloaded.<br/>
In the Import Unity Package dialog box, click Import.<br/>

